<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".UserLogin"
    android:background="@color/white"
    android:id="@+id/login_page">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="270dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/login"
                android:layout_marginBottom="30dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login to Enter"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_background_stroke"
                android:hint="Email"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                android:textColorHint="#8E8585"
                />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_background_stroke"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                android:textColorHint="#8E8585" />

            <Switch
                android:id="@+id/showpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="38dp"
                android:layout_marginTop="5dp"
                android:minHeight="48dp"
                android:text="Show Password"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/forgotpassid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:text="Forgot Password?"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <Button
                android:id="@+id/login_button"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_margin="30dp"
                android:text="Login"
                android:background="@drawable/button_background"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/signupRedirectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:layout_marginLeft="38dp"
                android:text="Not yet registered? Sign Up"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginBottom="50dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>